--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
  
+ <head>
+  <link href="./flintsmoke/index.css" type="text/css" rel="stylesheet">
+ 
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Space+Mono&display=swap" rel="stylesheet">
+ 
+ </head>
+ 
 <body>
   <h1>Flintsmoke</h1>
   <p>Welcome to my website!</p>
